# monetary-diary

./: .gitignore  LICENSE  README.md  interaction.py  main.py  pyproject.toml
handler/: type_handler.py
model/: Callback.py  Message.py
