[tool.poetry]
name = "monetary-diary"
version = "0.1.0"
description = ""
authors = ["syongkheng <33014950+syongkheng@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "monetary_diary"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pandas = "^1.5.3"
logging = "^0.4.9.6"
python-telegram-bot = "^20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
